[package]
name = "FoodTrucksFinderCLIRust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.18"
reqwest =  { version = "0.11.23", features = ["json", "async-std"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
